--- a/pom.xml
+++ b/pom.xml
@@ -5,45 +5,43 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>bananaj</groupId>
-    <artifactId>wildgroose</artifactId>
-    <version>0.1-SNAPSHOT</version>
+    <artifactId>wildgroose-parent</artifactId>
+    <version>0.1-SNAPHOT</version>
+    <packaging>pom</packaging>
+
+    <properties>
+        <wildgroose.version>0.1-SNAPSHOT</wildgroose.version>
+        <commons-io.version>2.4</commons-io.version>
+        <javax-servlet-api.version>3.1.0</javax-servlet-api.version>
+        <groovy-all.version>2.3.6</groovy-all.version>
+    </properties>
 
     <dependencies>
 
         <dependency>
-            <groupId>commons-io</groupId>
-            <artifactId>commons-io</artifactId>
-            <version>2.4</version>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>${javax-servlet-api.version}</version>
         </dependency>
 
         <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>javax.servlet-api</artifactId>
-            <version>3.1.0</version>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>${commons-io.version}</version>
         </dependency>
+
+
 
         <dependency>
             <groupId>org.codehaus.groovy</groupId>
             <artifactId>groovy-all</artifactId>
-            <version>2.3.6</version>
+            <version>${groovy-all.version}</version>
         </dependency>
     </dependencies>
 
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.eclipse.jetty</groupId>
-                <artifactId>jetty-maven-plugin</artifactId>
-                <version>9.0.5.v20130815</version>
-            <configuration>
-                    <scanIntervalSeconds>10</scanIntervalSeconds>
-                    <webApp>
-                        <contextPath>/test</contextPath>
-                    </webApp>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
+    <modules>
+        <module>wildgroose-wc</module>
+        <module>example-wildgroose-simple-web</module>
+    </modules>
 
 </project>
